fix: main scrollbar postion with chatPanel open

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -77,6 +77,10 @@ body {
     Helvetica Neue,
     sans-serif;
   transition: font-weight $transition-basic-1;
+
+  &.chat-open {
+    overflow: hidden;
+  }
 }
 
 a {
